@@ -1,4 +1,3 @@
-(declaim (optimize (speed 0) (safety 3) (debug 3)))
 (in-package #:l-math)
 
 ;;; L-MATH: a library for simple linear algebra.
@@ -36,19 +35,34 @@
 ;;; do so. If you do not wish to do so, delete this exception statement
 ;;; from your version.
 
-(defgeneric spline-interpolation (points &key degree parametrisation)
+(defgeneric spline-interpolation (points &key degree parametrisation close)
   (:documentation "Returns a b-spline that interpolates the given
   points. This is based on the discussion in sections 9.1 and 7.8 of
   Farin's Curves and Surfaces for Computer Aided Geometric
   Design. PARAMETRISATION should be one of :uniform, :centripetal,
-  or :chord-length.")
+  or :chord-length. If CLOSE is true, then this will produce a closed
+  b-spline.")
   (:method ((points list) &key
 	    (degree (dimension (first points)))
-	    (parametrisation :centripetal))
-    (let ((first-point (- (* 2 (first points))
-			  (second points)))
-	  (last-point (+ (- (nth (- (length points) 2) points))
-			 (* 2 (first (last points))))))
+	    (parametrisation :centripetal)
+	    close)
+    (let* ((points (if (and close	; Here we want to make sure that the points form a closed shape.
+			   (not (equivalent (first (last points))
+					    (first points))))
+		      (append points (list (first points)))
+		      points))
+	   (first-point (cond
+			  (close
+			   (nth (- (length points) 2) points))
+			  (t
+			   (- (* 2 (first points))
+			      (second points)))))
+	   (last-point (cond
+			 (close
+			  (second points))
+			 (t
+			  (+ (- (nth (- (length points) 2) points))
+			     (* 2 (first (last points))))))))
       (labels ((converge (spline)
 		 (let ((differences (mapcar #'(lambda (par point)
 						;; DIFFERENCES is the difference between the wanted
